# magtag-demo

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  credentials.conf_example  credentials.overlay_example  prj.conf  sample.yaml  west.yml
blinky/: CMakeLists.txt  README.rst
boards/: esp32.overlay  esp32s2_saola.conf  esp32s2_saola.overlay
dts/bindings/: gpios.yaml
golioth-demo/: CMakeLists.txt  Kconfig  README.rst  prj.conf
golioth-demo/boards/: adafruit_magtag.conf  adafruit_magtag.overlay  esp32.overlay
golioth-demo/src/: main.c
hello/: README.rst  prj.conf
hello/src/: main.c
magtag-common/: CMakeLists.txt  KConfig
magtag-common/accelerometer/: accel.c
magtag-common/buttons/: buttons.c  buttons.h
magtag-common/epaper/: font5x8.h  font6x8.h  magtag_epaper.c  magtag_epaper_hal.c  magtag_epaper_hal.h  ubuntu_monospaced_bold_10x16.h  ubuntu_monospaced_bold_19x32.h
magtag-common/ws2812/: ws2812_control.c
nametag/: CMakeLists.txt  README.rst  frame0.h  frame1.h  frame2.h  frame3.h  golioth_nametag.h  prj.conf
nametag/boards/: adafruit_magtag.conf  adafruit_magtag.overlay  esp32s2_saola.conf
nametag/src/: main.c
observe/: Kconfig  README.rst  prj.conf
observe/boards/: esp32s2_saola.conf
observe/src/: main.c
src/: main.c
src/accelerometer/: accel.c  accel.h
src/buttons/: buttons.h
src/epaper/: Debug.h  (+13 more)
stream/: README.rst  prj.conf
utility/: frame0.xbm  frame1.xbm  frame2.xbm  frame3.xbm  merge_bin.sh  provision_devices.py  splashscreen.xbm  splashscreen.xcf  xbm_flip_endian.py  xbm_to_header.py
zephyr/: module.yml
(+14 files in other folders)
